# solar-challenge-week0

./: .gitignore  README.md  pyproject.toml  requirements.txt
(.github/workflows/: ci.yml  unittests.yml
.github/workflows/: ci.yml  unittests.yml
app/: README.md  main.py
notebooks/: benin_eda.ipynb  compare_countries.ipynb  sierraleone_eda.ipynb  togo_eda.ipynb
src/: analyze.py  cleaning.py  data_loader.py  eda.py  modeling.py  preprocess.py  utils.py
tests/: test_cleaning.py  test_data_loader.py  test_first.py  test_utils.py
